--- a/styles/fridges.css
+++ b/styles/fridges.css
@@ -50,7 +50,7 @@ body {
 /* About Mobile Fridges Section */
 .about-fridge {
     padding: 50px 20px;
-    background: #f4f4f4;
+    background: #918c8c;
     text-align: center;
 }
 
